--- a/src/AkkaPersistence/packages.config
+++ b/src/AkkaPersistence/packages.config
@@ -1,8 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Akka" version="1.0.8" targetFramework="net452" />
+  <package id="Akka.Persistence" version="1.0.8.25-beta" targetFramework="net452" />
+  <package id="Google.ProtocolBuffers" version="2.4.1.555" targetFramework="net452" />
   <package id="Microsoft.ServiceFabric" version="5.0.217" targetFramework="net452" />
   <package id="Microsoft.ServiceFabric.Data" version="2.0.217" targetFramework="net452" />
   <package id="Microsoft.ServiceFabric.Services" version="2.0.217" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net452" />
   <package id="System.Collections.Immutable" version="1.1.36" targetFramework="net452" />
-  <package id="Wire" version="0.0.6" targetFramework="net452" />
 </packages>
