Fix to snapshot, added new counter actor

--- a/src/AkkaPersistence/AkkaPersistence.csproj
+++ b/src/AkkaPersistence/AkkaPersistence.csproj
@@ -90,6 +90,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Actors\AtLeastOnceDeliveryExampleActor.cs" />
+    <Compile Include="Actors\Counter.cs" />
     <Compile Include="Actors\ExamplePersistentActor.cs" />
     <Compile Include="Actors\ExamplePersistentFailingActor.cs" />
     <Compile Include="Actors\LoggerActor.cs" />
