--- a/src/contrib/persistence/Akka.Persistence.ServiceFabric/Akka.Persistence.ServiceFabric.csproj
+++ b/src/contrib/persistence/Akka.Persistence.ServiceFabric/Akka.Persistence.ServiceFabric.csproj
@@ -75,6 +75,7 @@
   <ItemGroup>
     <Compile Include="AkkaStatefulService.cs" />
     <Compile Include="Journal\JournalEntry.cs" />
+    <Compile Include="Journal\JournalEntrySerializer.cs" />
     <Compile Include="Journal\ServiceFabricJournal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceEventSource.cs" />
