Changed references for Akka, Akka.Persistence, and Akka.Serialization.Wire from project to nuget packages. Added Sample projects to same folders

--- a/.gitignore
+++ b/.gitignore
@@ -227,3 +227,4 @@ target/
 
 # API Approval received files
 **/Akka.API.Tests/*.received.txt
+/src/contrib/persistence/Akka.Persistence.ServiceFabric/Akka.Persistence.ServiceFabric.sln
